Make presentation dir

--- a/presentation/css/style.css
+++ b/presentation/css/style.css
@@ -11,3 +11,6 @@
 .reveal code,
 .reveal code,
 .reveal code { text-transform: none; }
+
+code.hljs { display: inline; }
+pre code.hljs { display: block; }
